// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoreInfoButton Renders default props 1`] = `
<div
  className="obojobo-draft--components--more-info-button is-default-label is-mode-clicked"
>
  <button
    aria-label="More info"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    ?
  </button>
  <div
    aria-labelledby="obojobo-draft--components--more-info-button--container--mock-uuid"
    className="info"
    onBlur={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="container"
      id="obojobo-draft--components--more-info-button--container--mock-uuid"
    />
  </div>
</div>
`;

exports[`MoreInfoButton Renders label 1`] = `
<div
  className="obojobo-draft--components--more-info-button is-not-default-label is-mode-clicked"
>
  <button
    aria-label="More info"
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Testing 123
  </button>
  <div
    aria-labelledby="obojobo-draft--components--more-info-button--container--mock-uuid"
    className="info"
    onBlur={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="container"
      id="obojobo-draft--components--more-info-button--container--mock-uuid"
    />
  </div>
</div>
`;
